--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,5 +28,5 @@
     "strictInputAccessModifiers": true,
     "strictTemplates": true
   },
-  "experimentalDecorators": true,
+  "experimentalDecorators": true
 }
